# soica_test

./: .gitmodules  README.md
cpp/: README.md
cpp/ImageEnhancer/: .gitignore  CMakeLists.txt  README.md
cpp/ImageEnhancer/src/: ImageEnhancer.cpp  ImageEnhancer.h  MainWindow.cpp  MainWindow.h  main_console.cpp  main_gui.cpp
cpp/ImageEnhancer/src/backend/: CMakeLists.txt
cpp/ImageEnhancer/src/backend/include/: HINProcessor.h  IImage.h  IImage2Tensor.h  IImageProcessor.h  IInferencer.h  ITensor.h  ITensor2Image.h  OpenCVImage.h  OpenCVImage2Tensor.h  OpenCVInferencer.h  OpenCVTensor.h  OpenCVTensor2Image.h  RawRGBImage.h  utils.h
cpp/ImageEnhancer/src/backend/src/: HINProcessor.cpp  OpenCVImage.cpp  OpenCVImage2Tensor.cpp  OpenCVInferencer.cpp  OpenCVTensor.cpp  OpenCVTensor2Image.cpp  RawRGBImage.cpp
python/: .gitignore  README.md  compare_2_images.py  convert_to_onnx.py  convert_to_onnx.yml  infer_like_demo.py  infer_like_demo.yml  infer_onnx.py  requirements.txt
